--- a/report.tex
+++ b/report.tex
@@ -1110,6 +1110,48 @@ sim_{ij}^z = (1 - \abs{z_i - z_j}/max_{ij}\abs{z_i-z_j})
 
 \end{enumerate}
 
+%\begin{tabular}{l | r@{.}l r@{.}l  | }
+%\hline
+%\rule{0pt}{2ex}\relax
+%Effect &\multicolumn{2}{c}{par.}&\multicolumn{2}{c | }{(s.e.)}  \\[0.5ex]
+%\hline
+%\multicolumn{4}{l}{\emph{Network Dynamics}}&\\
+%\hline
+%\rule{0pt}{2ex}\relax
+%constant friendship rate (period 1) &   6 & 377 & (0 & 927)\\
+%constant friendship rate (period 2) &   5 & 015 & (0 & 781)\\
+%\hline
+%\rule{0pt}{2ex}\relax
+%outdegree (density)                 & --2 & 871$^{\ast\ast\ast}$ & (0 & 151)\\
+%reciprocity                         &   2 & 747$^{\ast\ast\ast}$ & (0 & 270)\\
+%transitive triplets                 &   0 & 897$^{\ast\ast\ast}$ & (0 & 149)\\
+%transitive recipr. triplets         & --0 & 548$^\ast$           & (0 & 239)\\
+%smoke1 similarity                   &   0 & 226                  & (0 & 207)\\
+%drinking alter                      & --0 & 032                  & (0 & 096)\\
+%drinking ego                        &   0 & 037                  & (0 & 101)\\
+%drinking ego x drinking alter       &   0 & 174$^\ast$           & (0 & 072)\\
+%\hline
+%\multicolumn{4}{l}{\emph{Behaviour Dynamics}}&\\
+%\hline
+%\rule{0pt}{2ex}\relax
+%rate drinking (period 1)            &   1 & 316 & (0 & 371)\\
+%rate drinking (period 2)            &   1 & 798 & (0 & 476)\\
+%\hline
+%\rule{0pt}{2ex}\relax
+%drinking linear shape               &   0 & 414$^\dagger$        & (0 & 237)\\
+%drinking quadratic shape            & --0 & 574$^\dagger$        & (0 & 328)\\
+%drinking average alter              &   1 & 225                  & (0 & 810)\\
+%\hline
+%\multicolumn{5}{l}{\footnotesize{$^\dagger$ $p$ $<$ 0.1;
+%$^\ast$ $p$ $<$ 0.05; $^{\ast\ast}$ $p$ $<$ 0.01;
+%$^{\ast\ast\ast}$ $p$ $<$ 0.001;}}\\
+%\multicolumn{5}{l}
+%   {\footnotesize{convergence $t$ ratios all $<$ 0.06.}}\\
+%\multicolumn{5}{l}{\footnotesize{Overall maximum convergence ratio 0.16.}}
+%\end{tabular}
+%
+
+
 %\begin{table}
 %\centering
 %\caption[Examples of explanatory effects to include in the statistical model]{Examples of explanatory variables to include in the statistical model. \cite{Steglich} The network is denoted by x, where $ x_{ij} $ stands for the value of the directed relationship between actors i and j. The behavioral variable is denoted by z. We assume that $ x_{ij} = 1 $ stands for presence of a tie and $ x_{ij} = 0 $ for absence. } 
