--- a/report.tex
+++ b/report.tex
@@ -59,6 +59,10 @@
 \usepackage{graphicx}
 \usepackage{blindtext}
 
+%%%%% TIKZ
+
+
+
 %%%%%%%%%%%%%%%%%
 
 \begin{document}
@@ -289,7 +293,7 @@ Detecting change patterns, requires gathering  relevant data, cleaning it, and a
 
 \begin{figure}[!ht]
 \centering
-\epsfig{file=flowchart.eps, width=0.9\columnwidth}
+\epsfig{file=flowchart2.pdf, width=1.3\columnwidth}
 \caption{The methodology in a glance}
 \label{FlowChart}
 \end{figure}
@@ -307,7 +311,160 @@ Detecting change patterns, requires gathering  relevant data, cleaning it, and a
 %\end{figure}
 %\blindtext
 %
-
+%
+%\begin{tikzpicture}[scale=1.0, align=center, on grid, auto, ->,>=stealth']
+%
+% % First node
+% % STATE Data Collection
+% % Use previously defined 'state' as layout (see above)
+% % use tabular for content to get columns/rows
+% % parbox to limit width of the listing
+% \node[state] (Data Collection) 
+% {\begin{tabular}{l}
+%  \textbf{Data Collection}\\
+%  \parbox{4cm}{
+%  \begin{itemize}
+%   \item Mailing Lists
+%   \item Bug Tracking Repositories
+%   \item Codebase
+%  \end{itemize}
+%  }
+%  \end{tabular}};
+%
+% % STATE Data Cleaning and Wrangling
+% \node[state,       % layout (defined above)
+% node distance=2cm,     % distance to Data Collection
+% text width=5.5cm,        % max text width
+% yshift = -2cm,
+% xshift = 1cm,
+% right of=Data Collection,        % Position is to the right of Data Collection
+% ] (Data Cleaning and Wrangling)    % move 3cm in y
+% {%                     % posistion relative to the center of the 'box'
+% \begin{tabular}{l}     % content
+%  \textbf{Data Cleaning and Wrangling}\\
+%  \parbox{5cm}{12 equioespaced directed graphs for each project
+%}
+% \end{tabular}
+% };
+%
+% % STATE Morkov Chain Monte Carlo Estimation
+% \node[state,
+% right of=Data Cleaning and Wrangling,
+% node distance=2cm,
+% text width=7cm, 
+% yshift=-2cm] (Morkov Chain Monte Carlo Estimation) 
+% {%
+% \begin{tabular}{l}
+%  \textbf{Morkov Chain Monte Carlo Estimation}\\
+%  \parbox{6cm}{
+%  \begin{itemize}
+%  \item Rate of Change
+%  \item Parameter Estimates with p-value and s.e.
+%  \end{itemize}
+%  }
+% \end{tabular}
+% };
+%
+% % STATE Model
+% \node[state,
+% below of=Morkov Chain Monte Carlo Estimation,
+% node distance=1cm, yshift=-1cm, xshift = 2cm] (Model) 
+% {%
+% \begin{tabular}{l}
+%  \textbf{Statistical Model}\\
+%  \parbox{5cm}{
+%	\begin{itemize}
+%	\item Test of Goodness of Fit
+%	\item Relative Importance of Effects
+%\end{itemize}
+%  }
+% \end{tabular}
+% };
+%
+%
+% % STATE MANOVA
+% \node[state,
+% below of=Model,
+% node distance=1cm, yshift=-1.25cm, xshift = 3cm] (MANOVA) 
+% {%
+% \begin{tabular}{l}
+%  \textbf{Multi-Parameter T-test and MANOVA}\\
+%  \parbox{4cm}{
+%	\begin{itemize}
+%	\item Test of Goodness of Fit
+%	\item Relative Importance of Effects
+%\end{itemize}
+%  }
+% \end{tabular}
+% };
+% 
+%% % STATE Results
+%% \node[state,       % layout (defined above)
+%% node distance=5cm,     % distance to Data Collection
+%% text width=7cm,        % max text width
+%% below of=MANOVA,
+%% xshift= 1cm,        
+%% ] (Results) {
+%%    \begin{tcolorbox}[%
+%%        title={Results},
+%%    ]
+%%	\begin{itemize}
+%%	\item Reresented Collaboration with Longitudinal Change
+%%	\item Modeled change and Rate of change statistically
+%%	\item Expressed underlying properties/values of community Behavior as model effects and their significance and relative importance
+%%	\item Could be a starting point for gaining an understanding of longitudinal change and underlying properties of an open source project community
+%%	\end{itemize}
+%%    \end{tcolorbox}
+%%};
+%
+% \node[state,
+% below of=MANOVA,
+% node distance=1cm, yshift=-2.5cm, xshift = 1cm] (Results) 
+% {%
+% \begin{tabular}{l}
+%  \textbf{Results}\\
+%  \parbox{8cm}{
+%\begin{itemize}
+%	\item Reresented Collaboration with Longitudinal Change
+%	\item Modeled change and Rate of change statistically
+%	\item Expressed underlying properties/values of community Behavior as model effects and their significance and relative importance
+%	\item Good starting point for gaining an understanding of longitudinal change of underlying properties of an open source project community
+%	\end{itemize}
+%  }
+% \end{tabular}
+% };
+%
+% % draw the paths and and print some Text below/above the graph
+% \path 
+%(Data Collection) edge[bend right=-40]
+%%node[anchor=south,right,text width=1cm]
+%%{Raw Data}
+%(Data Cleaning and Wrangling)
+%                   
+%(Data Cleaning and Wrangling) 
+%edge [bend right=-10]
+%(Morkov Chain Monte Carlo Estimation)
+%
+% 
+%(Morkov Chain Monte Carlo Estimation)
+%edge[bend right=-10]
+%%node[anchor=east,right,text width=6cm,xshift=1em]
+%%{3} 
+%(Model)
+%
+%(Model)
+%edge[bend right=-20]
+%(MANOVA)
+%
+%(MANOVA)
+%edge[bend right=-20]
+%(Results)
+%
+%% (Morkov Chain Monte Carlo Estimation)  edge[bend left=45] node[anchor=north,below,text width=6cm,yshift=-1em,xshift=-2em]
+%%                  {X31
+%%                  } (Data Collection)
+% ;
+%\end{tikzpicture}
 
 \subsection{Phase 1: Data Collection}
 \label{DataCollection}
@@ -1110,6 +1267,30 @@ sim_{ij}^z = (1 - \abs{z_i - z_j}/max_{ij}\abs{z_i-z_j})
 
 \end{enumerate}
 
+
+
+%\begin{table}
+%\centering
+%\caption[Examples of explanatory effects to include in the statistical model]{Examples of explanatory variables to include in the statistical model. \cite{Steglich} The network is denoted by x, where $ x_{ij} $ stands for the value of the directed relationship between actors i and j. The behavioral variable is denoted by z. We assume that $ x_{ij} = 1 $ stands for presence of a tie and $ x_{ij} = 0 $ for absence. } 
+%\label{tableCovariates}
+%\begin{tabular}{m{0.2\textwidth} m{0.3\textwidth} m{0.5\textwidth}}
+%\hline\noalign{\smallskip}
+%\textbf{Effect} & \textbf{Statistic} & \textbf{Description} \\
+%\noalign{\smallskip}\hline\noalign{\smallskip}
+%Outdegree & \begin{equation*} \sum_j x_{ij} \end{equation*} & Overall tendency to have ties (Negative parameter means, on average, cost of friendship ties higher than their benefits) \\ 
+%Reciprocity & \begin{equation*} \sum_j x_{ij} x_{ji} \end{equation*} & Tendency to have reciprocated ties \\ 
+%Balance & \begin{equation*} \sum_j x_{ij}strsim_{ij} \end{equation*} & Tendency to have ties to structurally similar others (structural equivalence with respect to outgoing ties) \\ 
+%Covariate similarity & \begin{equation*} \sum_j x_{ij} sim_{ij} \end{equation*} & Tendency to have ties to similar others (homophile selection) \\ 
+%3-cycles & \begin{equation*} \sum_j x_{ij} \sum_h x_{jh}x_{hi} \end{equation*} & Tendency to form relationship cycles (negative parameter means absense of hierarchy) \\
+%Transitive triplets & \begin{equation*} \sum_j x_{ij} \sum_h x_{ih}x_{hj} \end{equation*} &  Tendency toward triadic closure of the neighborhood (linear effect of the number of indirect ties) \\
+%Transitive ties & \begin{equation*} \sum_j x_{ij} max_h (x_{ih}x_{hj}) \end{equation*} & Tendency toward triadic closure of the neighborhood (binary effect of indirect ties) \\
+%Covariate alter & \begin{equation*} \sum_j x_{ij} (z_j - \bar z) \end{equation*} & Main effect of alter's behavior (covariate determines popularity in network) \\ 
+%Actors at distance 2 & \begin{equation*} \sum_j (1 - x_{ij}) max_h (x_{ih}x_{hj}) \end{equation*} & Tendency to keep others at social distance 2 (negative measure of triadic closure; lower means stronger network closure) \\ 
+%\noalign{\smallskip}
+%\end{tabular}
+%\end{table}
+
+
 %\begin{tabular}{l | r@{.}l r@{.}l  | }
 %\hline
 %\rule{0pt}{2ex}\relax
@@ -1149,29 +1330,6 @@ sim_{ij}^z = (1 - \abs{z_i - z_j}/max_{ij}\abs{z_i-z_j})
 %   {\footnotesize{convergence $t$ ratios all $<$ 0.06.}}\\
 %\multicolumn{5}{l}{\footnotesize{Overall maximum convergence ratio 0.16.}}
 %\end{tabular}
-%
-
-
-%\begin{table}
-%\centering
-%\caption[Examples of explanatory effects to include in the statistical model]{Examples of explanatory variables to include in the statistical model. \cite{Steglich} The network is denoted by x, where $ x_{ij} $ stands for the value of the directed relationship between actors i and j. The behavioral variable is denoted by z. We assume that $ x_{ij} = 1 $ stands for presence of a tie and $ x_{ij} = 0 $ for absence. } 
-%\label{tableCovariates}
-%\begin{tabular}{m{0.2\textwidth} m{0.3\textwidth} m{0.5\textwidth}}
-%\hline\noalign{\smallskip}
-%\textbf{Effect} & \textbf{Statistic} & \textbf{Description} \\
-%\noalign{\smallskip}\hline\noalign{\smallskip}
-%Outdegree & \begin{equation*} \sum_j x_{ij} \end{equation*} & Overall tendency to have ties (Negative parameter means, on average, cost of friendship ties higher than their benefits) \\ 
-%Reciprocity & \begin{equation*} \sum_j x_{ij} x_{ji} \end{equation*} & Tendency to have reciprocated ties \\ 
-%Balance & \begin{equation*} \sum_j x_{ij}strsim_{ij} \end{equation*} & Tendency to have ties to structurally similar others (structural equivalence with respect to outgoing ties) \\ 
-%Covariate similarity & \begin{equation*} \sum_j x_{ij} sim_{ij} \end{equation*} & Tendency to have ties to similar others (homophile selection) \\ 
-%3-cycles & \begin{equation*} \sum_j x_{ij} \sum_h x_{jh}x_{hi} \end{equation*} & Tendency to form relationship cycles (negative parameter means absense of hierarchy) \\
-%Transitive triplets & \begin{equation*} \sum_j x_{ij} \sum_h x_{ih}x_{hj} \end{equation*} &  Tendency toward triadic closure of the neighborhood (linear effect of the number of indirect ties) \\
-%Transitive ties & \begin{equation*} \sum_j x_{ij} max_h (x_{ih}x_{hj}) \end{equation*} & Tendency toward triadic closure of the neighborhood (binary effect of indirect ties) \\
-%Covariate alter & \begin{equation*} \sum_j x_{ij} (z_j - \bar z) \end{equation*} & Main effect of alter's behavior (covariate determines popularity in network) \\ 
-%Actors at distance 2 & \begin{equation*} \sum_j (1 - x_{ij}) max_h (x_{ih}x_{hj}) \end{equation*} & Tendency to keep others at social distance 2 (negative measure of triadic closure; lower means stronger network closure) \\ 
-%\noalign{\smallskip}
-%\end{tabular}
-%\end{table}
 
 
 \end{appendices}
