--- a/report.tex
+++ b/report.tex
@@ -289,13 +289,20 @@ What quantitative measure(s) can be used as an early warning sign of an inflecti
 \section{Methodology}
 \label{methodology}
 
-Detecting change patterns, requires gathering  relevant data, cleaning it, and analyzing it. In the following subsections, we describe the proposed process in detail. Figure \ref{FlowChart} shows the overview of our methodology.
+Detecting change patterns, requires gathering  relevant data, cleaning it, and analyzing it. In the following subsections, we describe the proposed process in detail. Figures \ref{FlowChart} and \ref{FlowChartOverview} show the overview of the methodology.
 
 \begin{figure}[!ht]
 \centering
 \epsfig{file=flowchart2.pdf, width=1.3\columnwidth}
 \caption{The methodology in a glance}
 \label{FlowChart}
+\end{figure}
+
+\begin{figure}[!ht]
+\centering
+\epsfig{file=flowchart.eps, width=0.9\columnwidth}
+\caption{The methodology overview}
+\label{FlowChartOverview}
 \end{figure}
 
 %\blindtext
