--- a/report.tex
+++ b/report.tex
@@ -293,7 +293,7 @@ Detecting change patterns, requires gathering  relevant data, cleaning it, and a
 
 \begin{figure}[!ht]
 \centering
-\epsfig{file=flowchart2.pdf, width=1.3\columnwidth}
+\epsfig{file=epc-flow-charts.pdf, width=1.3\columnwidth}
 \caption{The methodology in a glance}
 \label{FlowChart}
 \end{figure}
