--- a/report.tex
+++ b/report.tex
@@ -721,6 +721,16 @@ represents brokerage
 \end{enumerate}
 
 \paragraph{Behavior-related Effects\\}
+Properties of developers can be called their behavior. Examples include: 
+
+\begin{itemize}
+\item Developer's level of contribution/activity (e.g. code commits per month, or mailing list posts per month)
+\item Developer's age (either birth age, (young 20-year-old developer vs. older 50-year-old developer) or their seniority as a development community member (i.e. how long they have been in the community)
+\item Developer's propensity for short-responses vs. long-responses. (under-communicator vs. over-communicator)
+\item Developer's communication sentiment (generally bitter in communication known as ``a jerk''), or has a positive communication prose)
+\item Developer's engagement style (i.e. dive-bomber-style contributor who jumps in, overcommits and leave, vs. a steady and increasingly engaged contributor who starts off slow and grows his/her commitment gradually)
+\end{itemize}
+
 For a behavior-related variable $s_{ik}^z(x,z)$, we can estimate the following effects.
 
 Let's denote a dependent behavior variable as $Z$.
@@ -859,7 +869,7 @@ If the data does not exhibit statistically significant differences, then our stu
 \subsection{Validation}
 
 \subsubsection{Qualitative Study: Interviews and Survey}
-To validate what our quantitative approach finds, we need to compare it to what people remember of the situation. This validation check requires interviewing and surveying people from the studied forked projects. Semi-structured interviews need to be conducted, with as many developers from the forked projects, till the interviewers reach a point of saturation (i.e., when no new information is gained by doing more interviews), as possible. These semi-structured interviews will be recorded, transcribed, and coded according to the statistical model's covariates, to find overlapping and common patterns.
+To validate what our quantitative approach finds, and to account and check for possible confounding factors, we need to compare it to what people remember of the situation. This validation check requires interviewing and surveying people from the studied forked projects. Semi-structured interviews need to be conducted, with as many developers from the forked projects, till the interviewers reach a point of saturation (i.e., when no new information is gained by doing more interviews), as possible. These semi-structured interviews will be recorded, transcribed, and coded according to the statistical model's covariates, to find overlapping and common patterns.
 
 \subsubsection{Sentiment Analysis}
 To complement the study, the content of the messages send and received by the top contributors of the project in the month leading to the forking events will be analyzed. This data will be used as one of the developers' individual attributes in our statistical modeling. 
