--- a/report.tex
+++ b/report.tex
@@ -81,6 +81,7 @@ Ph.D. Committee Members:\\
 Prof. Alex Groce\\
 Prof. Chris Scaffidi\\
 Prof. Drew Gerkey\\
+Prof. A. Morrie Craig\\
 }
 
 \maketitle
